# fireauth

./: Cargo.toml  README.md
examples/: crud.rs  oob.rs
src/: lib.rs
src/api/: cacert.pem  mod.rs  sign_in.rs  sign_up.rs  token.rs  user.rs
