[package]
name = "fireauth"
version = "0.1.5"
authors = ["khant <contact@khant.dev>", "Federico Fusco"]
edition = "2021"
description = "Firebase authentication for rust."
license-file = "LICENSE"
homepage = "https://github.com/the-robot/fireauth"
documentation = "https://github.com/the-robot/fireauth"
repository = "https://github.com/the-robot/fireauth"
readme = "README.md"
keywords = ["jwt", "firebase", "authentication"]
categories = ["authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
jsonwebtoken = { version = "8.2.0", features = ["use_pem"] }
serde_json = "1"
thiserror = "1.0.30"