[package]
name = "firebase-auth-sdk"
version = "0.1.0"
authors = ["Federico Fusco", "khant <contact@khant.dev>"]
edition = "2021"
description = "Firebase authentication SDK for rust."
license-file = "LICENSE"
homepage = "https://github.com/federicofusco/firebase-auth-sdk"
documentation = "https://github.com/federicofusco/firebase-auth-sdk"
repository = "https://github.com/federicofusco/firebase-auth-sdk"
readme = "README.md"
keywords = ["jwt", "firebase", "authentication"]
categories = ["authentication"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
jsonwebtoken = { version = "8.2.0", features = ["use_pem"] }
serde_json = "1"
thiserror = "1.0.30"
base64 = "0.21.2"
